<?xml version="1.0" encoding="utf-8"?>
<dmitriy.deomin.mysoft.Fon_item
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="0dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardPreventCornerOverlap="false">

    <LinearLayout
        android:id="@+id/menu_progi_alert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/button_abaut"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:text="@string/oproge" />

        <Button
            android:id="@+id/button_setting"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:text="@string/setting" />


        <Button
            android:id="@+id/button_setting_delete_kach"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:text="Очистить кеш" />

        <Button
            android:id="@+id/button_unpak"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:text="@string/unpak_cash" />


    </LinearLayout>
</dmitriy.deomin.mysoft.Fon_item>