<?xml version="1.0" encoding="utf-8"?>
    <dmitriy.deomin.mysoft.Fon_item
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:elevation="0dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false">


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/dialog_fon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:showDividers="none">

            <dmitriy.deomin.mysoft.Text
                android:id="@+id/text_voprosa_del_zip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/dopolnitelnay_papka_dla_programmi"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_voprosa_del_zip"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="horizontal"
                android:showDividers="none">

                <Button
                    android:id="@+id/button_dialog_send_data"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_marginRight="30dp"
                    android:background="@android:color/transparent"
                    android:text="@string/otpravit_cash"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button_dialog_send_apk"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:background="@android:color/transparent"
                    android:text="@string/send_apk"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

        </RelativeLayout>
    </dmitriy.deomin.mysoft.Fon_item>